--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <div id="map"></div>
     <script type="text/javascript">
       document.addEventListener('DOMContentLoaded', function() {
-        var gData
-        var URL = "0AvFUWxii39gXdFhqZzdTeU5DTWtOdENkQ1Y5bHdqT0E"
-        Tabletop.init( { key: URL, callback: showInfo, simpleSheet: true } ) 
+        var gData;
+        // 0AtXkFFQzkJ9xdDlna1BGZjFKQU0yUXdwZ1BWMVVUdGc
+        var URL = "0AtXkFFQzkJ9xdDlna1BGZjFKQU0yUXdwZ1BWMVVUdGc";
+        Tabletop.init( { key: URL, callback: showInfo, simpleSheet: true } ); 
       }) 
       function showInfo(data) {
         gData = data
