--- a/index.html
+++ b/index.html
@@ -7,24 +7,11 @@
         <script type="text/javascript" src="js/d3.js"></script>
         <script type="text/javascript" src="js/sheetsee.js"></script>
         <link href='http://api.tiles.mapbox.com/mapbox.js/v1.5.2/mapbox.css' rel='stylesheet' />
+        <script type="text/javascript" src="js/dsrtt.js"></script>
     </head>
     <style> #map {height: 600px; width: 600px;} </style>
     <body>
     <p>Hi</p>
     <div id="map"></div>
-    <script type="text/javascript">
-      document.addEventListener('DOMContentLoaded', function() {
-        var gData;
-        // 0AtXkFFQzkJ9xdDlna1BGZjFKQU0yUXdwZ1BWMVVUdGc
-        var URL = "0AtXkFFQzkJ9xdDlna1BGZjFKQU0yUXdwZ1BWMVVUdGc";
-        Tabletop.init( { key: URL, callback: showInfo, simpleSheet: true } ); 
-      }) 
-      function showInfo(data) {
-        gData = data
-       
-        // Cool stuff goes here
-
-      }
-    </script>
     </body>
 </html>
