Major layout changes to make this site Jekyll based and have separate pages for each event.  Now to run the site locally instead of running serve.sh you need to run jekyll --serve and view the site on localhost port 4000.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,6 @@
-<html>
-    <head>
-        <script type="text/javascript" src="http://api.tiles.mapbox.com/mapbox.js/v1.5.2/mapbox.js"></script>
-        <script type="text/javascript" src="js/ICanHaz.js"></script>
-        <script type="text/javascript" src="js/jquery.js"></script>
-        <script type="text/javascript" src="js/tabletop.js"></script>
-        <script type="text/javascript" src="js/d3.js"></script>
-        <script type="text/javascript" src="js/sheetsee.js"></script>
-        <link href='http://api.tiles.mapbox.com/mapbox.js/v1.5.2/mapbox.css' rel='stylesheet' />
-        <script type="text/javascript" src="js/dsrtt.js"></script>
-    </head>
-    <style> #map {height: 600px; width: 600px;} </style>
-    <body>
-    <p>Hi</p>
-    <div id="map"></div>
-    </body>
-</html>
+---
+layout: default
+title: Home
+---
+
+<p>Home Page</p>
